// proto/page_service.proto
syntax = "proto3";

package cms;
option go_package = "./proto";

// Service for managing CMS pages
service ModService {
  rpc ListMods (ListModRequest) returns (ListModResponse);
  rpc GetMod (GetModRequest) returns (GetModResponse);
  rpc CreateMod (CreateModRequest) returns (CreateModResponse);
  rpc UpdateMod (UpdateModRequest) returns (UpdateModResponse);
}

// --- Messages for ModService ---

message Mod {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateModRequest {
  string name = 1;
  string description = 2;
}

message CreateModResponse {
  Mod mod = 1;
}

message GetModRequest {
  string mod_id = 1;
}

message GetModResponse {
  Mod mod = 1;
}

message ListModRequest {
}

message ListModResponse {
  repeated Mod mods = 1;
}

message UpdateModRequest {
  string mod_id = 1;
  string name = 2;
  string description = 3;
}

message UpdateModResponse {
  Mod mod = 1;
}
